--- a/EmbeddedAssignment/EmbeddedAssignment.vcxproj.filters
+++ b/EmbeddedAssignment/EmbeddedAssignment.vcxproj.filters
@@ -13,5 +13,57 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="소스 파일\data">
+      <UniqueIdentifier>{175bedbf-99f2-4bab-a4e3-cee5e0882c2a}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="D:\Downloads\Homework\Homework\cnn.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="D:\Downloads\Homework\Homework\config.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="D:\Downloads\Homework\Homework\main.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="D:\Downloads\Homework\Homework\cnn.h">
+      <Filter>소스 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="D:\Downloads\Homework\Homework\config.h">
+      <Filter>소스 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="D:\Downloads\Homework\Homework\data\bias_conv1.h">
+      <Filter>소스 파일\data</Filter>
+    </ClInclude>
+    <ClInclude Include="D:\Downloads\Homework\Homework\data\bias_conv2.h">
+      <Filter>소스 파일\data</Filter>
+    </ClInclude>
+    <ClInclude Include="D:\Downloads\Homework\Homework\data\bias_ip1.h">
+      <Filter>소스 파일\data</Filter>
+    </ClInclude>
+    <ClInclude Include="D:\Downloads\Homework\Homework\data\bias_ip2.h">
+      <Filter>소스 파일\data</Filter>
+    </ClInclude>
+    <ClInclude Include="D:\Downloads\Homework\Homework\data\label.h">
+      <Filter>소스 파일\data</Filter>
+    </ClInclude>
+    <ClInclude Include="D:\Downloads\Homework\Homework\data\test_set.h">
+      <Filter>소스 파일\data</Filter>
+    </ClInclude>
+    <ClInclude Include="D:\Downloads\Homework\Homework\data\weights_conv1.h">
+      <Filter>소스 파일\data</Filter>
+    </ClInclude>
+    <ClInclude Include="D:\Downloads\Homework\Homework\data\weights_conv2.h">
+      <Filter>소스 파일\data</Filter>
+    </ClInclude>
+    <ClInclude Include="D:\Downloads\Homework\Homework\data\weights_ip1.h">
+      <Filter>소스 파일\data</Filter>
+    </ClInclude>
+    <ClInclude Include="D:\Downloads\Homework\Homework\data\weights_ip2.h">
+      <Filter>소스 파일\data</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
